--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
-    android:orientation="vertical"
+    android:id="@+id/drawerLayout"
+    tools:openDrawer="start"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".presentation.acivitys.MainActivity">
+
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/topAppBar"
@@ -18,7 +23,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:navigationIcon="@drawable/naviagation_drawer"
         app:title="Safe Lock"
-        app:titleCentered="true" />
+        app:titleCentered="true"/>
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/nav_host_fragment"
@@ -27,7 +32,19 @@
         android:name="androidx.navigation.fragment.NavHostFragment"
         app:navGraph="@navigation/nav_graph"
         app:defaultNavHost="true"/>
-
-
-
 </LinearLayout>
+
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/navigationView"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        app:menu="@menu/navgationdrawer_menu"
+        android:layout_gravity="start"
+        android:backgroundTint="@color/topAppBarColor"
+        app:itemIconTint="@color/toolBarTitleTextColor"
+        app:itemTextColor="@color/toolBarTitleTextColor"
+        app:headerLayout="@layout/header_navigation_drawer"/>
+
+
+
+</androidx.drawerlayout.widget.DrawerLayout>
