--- a/app/src/main/res/menu/passwordadd_menu.xml
+++ b/app/src/main/res/menu/passwordadd_menu.xml
@@ -3,9 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/action_search"
-        android:icon="@drawable/search_icon"
-        android:title="Поиск"
+        android:id="@+id/passwordchack"
+        android:icon="@drawable/passwordcheck_icon"
+        android:title="Видимость пароля"
         app:showAsAction="ifRoom"/>
 
 </menu>
