--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -22,5 +22,16 @@
         <argument
             android:name="categoryTitle"
             app:argType="string"/>
+        <action
+            android:id="@+id/action_detailsFragment_to_addPassword"
+            app:destination="@id/addPassword" />
     </fragment>
+    <fragment
+        android:id="@+id/addPassword"
+        android:name="com.example.safelock.presentation.fragments.AddPassword"
+        android:label=" "
+        tools:layout="@layout/fragment_add_password" />
+    <argument
+        android:name="categoryTitle"
+        app:argType="string"/>
 </navigation>
