--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,6 +4,8 @@
        <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
         <item name="titleTextColor">@color/toolBarTitleTextColor</item>
+        <item name="android:statusBarColor">@color/topAppBarColor</item>
+        <item name="android:windowLightStatusBar">true</item>
     </style>
 
     <style name="Theme.SafeLock" parent="Base.Theme.SafeLock" />
