--- a/app/src/main/res/layout/fragment_add_password.xml
+++ b/app/src/main/res/layout/fragment_add_password.xml
@@ -16,10 +16,12 @@
         android:layout_marginEnd="8dp"
         android:background="@drawable/addpasswordelement_backgraund"
         android:hint="Название"
-        android:textColor="@color/black"
+        android:maxLength="20"
         android:paddingStart="21dp"
         android:paddingTop="18dp"
         android:paddingBottom="18dp"
+        android:singleLine="true"
+        android:textColor="@color/black"
         android:textColorHint="@color/etHintColor"
         android:textSize="16sp"
         app:layout_constraintEnd_toStartOf="@+id/iv_copytitle"
@@ -31,6 +33,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
+        android:background="@drawable/rounded_shape"
+        android:clipToOutline="true"
+        android:foreground="?attr/selectableItemBackgroundBorderless"
         android:src="@drawable/copytext_icon"
         app:layout_constraintBottom_toBottomOf="@+id/ed_title"
         app:layout_constraintEnd_toEndOf="parent"
@@ -45,10 +50,12 @@
         android:layout_marginEnd="8dp"
         android:background="@drawable/addpasswordelement_backgraund"
         android:hint="Пароль"
-        android:textColor="@color/black"
+        android:maxLength="16"
         android:paddingStart="21dp"
         android:paddingTop="18dp"
         android:paddingBottom="18dp"
+        android:singleLine="true"
+        android:textColor="@color/black"
         android:textColorHint="@color/etHintColor"
         android:textSize="16sp"
         app:layout_constraintEnd_toStartOf="@+id/iv_randomPossword"
@@ -60,6 +67,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
+        android:background="@drawable/rounded_shape"
+        android:clipToOutline="true"
+        android:foreground="?attr/selectableItemBackgroundBorderless"
         android:src="@drawable/copytext_icon"
         app:layout_constraintBottom_toBottomOf="@+id/ed_password"
         app:layout_constraintEnd_toEndOf="parent"
@@ -70,6 +80,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
+        android:background="@drawable/rounded_shape"
+        android:clipToOutline="true"
+        android:foreground="?attr/selectableItemBackgroundBorderless"
         android:src="@drawable/randompassword_icon"
         app:layout_constraintBottom_toBottomOf="@+id/ed_password"
         app:layout_constraintEnd_toStartOf="@+id/iv_copypassword"
@@ -84,10 +97,11 @@
         android:layout_marginEnd="8dp"
         android:background="@drawable/addpasswordelement_backgraund"
         android:hint="Описание"
-        android:textColor="@color/black"
         android:paddingStart="21dp"
         android:paddingTop="18dp"
+        android:paddingEnd="21dp"
         android:paddingBottom="18dp"
+        android:textColor="@color/black"
         android:textColorHint="@color/etHintColor"
         android:textSize="16sp"
         app:layout_constraintEnd_toStartOf="@+id/iv_randomPossword"
