--- a/app/src/main/res/menu/topappbar_menu.xml
+++ b/app/src/main/res/menu/topappbar_menu.xml
@@ -6,6 +6,7 @@
         android:id="@+id/action_search"
         android:icon="@drawable/search_icon"
         android:title="Поиск"
-        app:showAsAction="ifRoom"/>
+        app:actionViewClass="androidx.appcompat.widget.SearchView"
+        app:showAsAction="ifRoom|collapseActionView" />
 
 </menu>
