--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -9,49 +9,8 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical">
-
-        <com.google.android.material.chip.ChipGroup
-            android:id="@+id/chipGroup"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="11dp"
-            android:layout_marginTop="6dp"
-            android:layout_marginRight="11dp"
-            app:selectionRequired="true"
-            app:singleSelection="true">
-
-            <com.google.android.material.chip.Chip
-                android:id="@+id/chipAlphobet"
-                style="@style/Widget.MaterialComponents.Chip.Filter"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/filter_backgraund"
-                android:ellipsize="end"
-                android:text="По алфавиту"
-                app:closeIconEnabled="false" />
-
-            <com.google.android.material.chip.Chip
-                android:id="@+id/chipNewdate"
-                style="@style/Widget.MaterialComponents.Chip.Filter"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/filter_backgraund"
-                android:ellipsize="end"
-                android:text="По новым" />
-
-            <com.google.android.material.chip.Chip
-                android:id="@+id/chipOlddate"
-                style="@style/Widget.MaterialComponents.Chip.Filter"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/filter_backgraund"
-                android:ellipsize="end"
-                android:text="По старым" />
-
-        </com.google.android.material.chip.ChipGroup>
-
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_password"
