--- a/app/src/main/res/layout/fragment_create_profile.xml
+++ b/app/src/main/res/layout/fragment_create_profile.xml
@@ -32,6 +32,9 @@
         android:layout_height="wrap_content"
         android:background="@drawable/addpasswordelement_backgraund"
         android:hint="Пароль"
+        android:inputType="textPassword"
+        android:maxLength="20"
+        android:singleLine="true"
         android:textColorHint="@color/etHintColor"
         android:layout_marginTop="7dp"
         android:padding="17dp"
@@ -44,7 +47,10 @@
         android:layout_height="wrap_content"
         android:background="@drawable/addpasswordelement_backgraund"
         android:hint="Подтверждение пароля"
+        android:inputType="textPassword"
         android:textColorHint="@color/etHintColor"
+        android:maxLength="20"
+        android:singleLine="true"
         android:layout_marginTop="7dp"
         android:padding="17dp"
         android:layout_marginStart="18dp"
