--- a/app/src/main/res/layout/header_navigation_drawer.xml
+++ b/app/src/main/res/layout/header_navigation_drawer.xml
@@ -15,4 +15,11 @@
         android:textColor="@color/toolBarTitleTextColor"
         android:textSize="14sp" />
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_margin="14dp"
+        android:background="@color/grey"/>
+
+
 </LinearLayout>
