--- a/app/src/main/res/layout/fragment_add_password.xml
+++ b/app/src/main/res/layout/fragment_add_password.xml
@@ -16,10 +16,10 @@
         android:layout_marginEnd="8dp"
         android:background="@drawable/addpasswordelement_backgraund"
         android:hint="Название"
-        android:maxLength="20"
         android:paddingStart="21dp"
         android:paddingTop="18dp"
         android:paddingBottom="18dp"
+        android:maxLength="20"
         android:singleLine="true"
         android:textColor="@color/black"
         android:textColorHint="@color/etHintColor"
@@ -55,6 +55,7 @@
         android:paddingTop="18dp"
         android:paddingBottom="18dp"
         android:singleLine="true"
+        android:inputType="textPassword"
         android:textColor="@color/black"
         android:textColorHint="@color/etHintColor"
         android:textSize="16sp"
