--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="grey">#929292</color>
 
     <color name="topAppBarColor">#FFD9E2</color>
     <color name="toolBarTitleTextColor">#3A071D</color>
